Address header layout issues.

--- a/scss/lexa.scss
+++ b/scss/lexa.scss
@@ -60,12 +60,26 @@
         flex-flow: inherit;
     }
 
+    .lexa-nav-second-row {
+        display: flex;
+        justify-content: space-between;
+    }
+
     .primary-navigation {
         margin: auto;
     }
 
     .popover-region-container {
         top: $navbar-height / 2;
+    }
+}
+
+@include media-breakpoint-up(md) {
+    .navbar {
+        .lexa-nav-second-row {
+            display: grid;
+            grid-template-columns: 250px auto 250px;
+        }
     }
 }
 
